snapshot-tests/tests/snapshots/parser__require_newlines__basic2.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ basic2:1:4
  │
1 │ 0=0r0=0r=false
  │    ^ invalid integer: contains non-digit character
